gcc/testsuite/gdc.test/compilable/imports/test70.d
module imports.test70;

void foo()
{
}
