gcc/testsuite/gdc.test/fail_compilation/imports/fail20638b.d
module imports.fail20638b;

private void foo() { }
